fixing the white space on the right side of the page

--- a/assets/custom-hero.css
+++ b/assets/custom-hero.css
@@ -1,5 +1,7 @@
 .banner__content.banner__content--middle-center.page-width {
     height: 100vh;
+    max-width: 100%;
+    min-width: 100%;
 }
 
 .banner__box {
